--- a/build.xml
+++ b/build.xml
@@ -84,6 +84,24 @@
              basedir="${build.dir}"
              includes="${dist.package.name}/**/*"/>
     </target>
+    
+    <target name="build.binary.dist" depends="build.jar">
+        <mkdir dir="${build.dir}/${dist.package.name}"/>
+        <mkdir dir="${build.dir}/${dist.package.name}/build"/>
+        <copy file="${build.dir}/${jar.name}" todir="${build.dir}/${dist.package.name}/build"/>
+    	<copy file="${product.name}.tld" todir="${build.dir}/${dist.package.name}"/>
+    	<copy file="${product.name}.tld" todir="${build.dir}"/>
+    	<move file="${build.dir}/${product.name}.tld" tofile="${build.dir}/${product.name}-${version.number}.tld"/>
+        <copy todir="${build.dir}/${dist.package.name}">
+            <fileset dir=".">
+                <include name="doc/**/*"/>
+                <include name="lib/**/*"/>
+            </fileset>
+        </copy>
+        <zip destfile="${build.dir}/${dist.package.name}.zip"
+             basedir="${build.dir}"
+             includes="${dist.package.name}/**/*"/>
+    </target>
 
     <target name="test" depends="build.jar">
        <path id="compressor-classpath">
