--- a/build.xml
+++ b/build.xml
@@ -105,14 +105,14 @@
 
     <target name="test" depends="build.jar">
        <path id="compressor-classpath">
-            <fileset dir="${user.home}/GIT/htmlcompressor/lib"> 
+            <fileset dir="./lib"> 
                 <include name="*.jar"/>
             </fileset>
             <pathelement location="${build.dir}/htmlcompressor-0.7.3.jar"/>
         </path>    
         <taskdef name="compresshtml" classname="com.googlecode.htmlcompressor.ant.task.CompressHtmlTask" classpathref="compressor-classpath"/>
         <compresshtml destdir="./tmp">
-            <fileset dir="${user.home}/GIT/gcom-svn/Grainger/grainger/script_root/jsp" includes="**/*.jsp"/>
+            <fileset dir="${user.home}/GIT/gcom-svn/Grainger/grainger/script_root/jsp" includes="**/quickItemEntry.jsp"/>
         </compresshtml>
     </target>    
 
