--- a/build.xml
+++ b/build.xml
@@ -114,7 +114,7 @@
             <pathelement location="${build.dir}/htmlcompressor-0.8.1.jar"/>
         </path>    
         <taskdef name="compresshtml" classname="com.googlecode.htmlcompressor.ant.task.CompressHtmlTask" classpathref="compressor-classpath"/>
-        <compresshtml destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="true" skipstrutsformcomments="true">
+        <compresshtml destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="false" skipstrutsformcomments="true">
             <fileset dir="testsrc" includes="**/*.jsp"/>
         </compresshtml>
     </target>    
