--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ src.dir = src
 lib.dir = lib
 doc.dir = doc
 build.dir = build
-product.name = htmlcompressor
-version.number = 0.8.1
+product.name = jspcompressor
+version.number = 0.1
 jar.name = ${product.name}-${version.number}.jar
 dist.package.name = ${product.name}-${version.number}
