--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,7 @@
         </copy>
         <jar destfile="${build.dir}/${jar.name}" basedir="${build.dir}/jar">
 			<manifest>
-				<attribute name="Main-Class" value="com.googlecode.htmlcompressor.CmdLineCompressor"/>
+				<attribute name="Main-Class" value="com.googlecode.jspcompressorCmdLineCompressor"/>
 				<attribute name="Class-Path" value="yuicompressor-2.4.3.jar"/>
 			</manifest>
         </jar>
@@ -50,7 +50,7 @@
 	<target name="build.javadoc" depends="build.classes">
 		<delete dir="${doc.dir}" quiet="true"/>
 		<mkdir dir="${doc.dir}" />
-	    <javadoc packagenames="com.googlecode.htmlcompressor.*"
+	    <javadoc packagenames="com.googlecode.jspcompressor*"
 	             destdir="${doc.dir}"
 	             author="true"
 	             private="false"
@@ -111,12 +111,12 @@
     <target name="test" depends="build.jar">
        <path id="compressor-classpath">
             <pathelement location="${lib.dir}/yuicompressor-2.4.3.jar"/>
-            <pathelement location="${build.dir}/htmlcompressor-0.8.1.jar"/>
+            <pathelement location="${build.dir}/jspcompressor-0.1.jar"/>
         </path>    
-        <taskdef name="compresshtml" classname="com.googlecode.htmlcompressor.ant.task.CompressHtmlTask" classpathref="compressor-classpath"/>
-        <compresshtml destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="false" skipstrutsformcomments="true">
+        <taskdef name="jspcompressor" classname="com.googlecode.jspcompressor.ant.task.CompressJspTask" classpathref="compressor-classpath"/>
+        <jspcompressor destdir="./tmp" compressjs="true" removecomments="true" removejspcomments="true" debug="false" skipstrutsformcomments="true">
             <fileset dir="testsrc" includes="**/*.jsp"/>
-        </compresshtml>
+        </jspcompressor>
     </target>    
 
 </project>
