Fix JavaDoc generation and remove documentation from repository, as since we can generate it there is no reason to actually source it.

--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,7 @@
 	<target name="build.javadoc" depends="build.classes">
 		<delete dir="${doc.dir}" quiet="true"/>
 		<mkdir dir="${doc.dir}" />
-	    <javadoc packagenames="com.googlecode.jspcompressor*"
+	    <javadoc packagenames="com.googlecode.jspcompressor.*"
 	             destdir="${doc.dir}"
 	             author="true"
 	             private="false"
