Remove all JavaDoc warnings.  Also, added ant.lib to the build.properties so we can set location of ant.jar.

--- a/build.xml
+++ b/build.xml
@@ -61,6 +61,7 @@
 	    		<pathelement location="${lib.dir}/velocity-1.6.2.jar"/>
                 <pathelement location="${lib.dir}/rhino-1.6R7.jar"/>
             	<pathelement location="${lib.dir}/jargs-1.0.jar"/>
+                <pathelement location="${ant.lib}/ant.jar"/>
             </classpath>
 	      <sourcepath>
 	        <pathelement path="${src.dir}" />
