--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@ src.dir = src
 lib.dir = lib
 doc.dir = doc
 build.dir = build
+ant.lib = /usr/share/ant/lib
 product.name = jspcompressor
 version.number = 0.1
 jar.name = ${product.name}-${version.number}.jar
