--- a/build.xml
+++ b/build.xml
@@ -115,8 +115,8 @@
             <pathelement location="${build.dir}/jspcompressor-0.1.jar"/>
         </path>    
         <taskdef name="jspcompressor" classname="com.googlecode.jspcompressor.ant.task.CompressJspTask" classpathref="compressor-classpath"/>
-        <jspcompressor destdir="./tmp" failonerror="true" compressjs="true" removecomments="true" removejspcomments="true" debug="true" skipstrutsformcomments="true">
-            <fileset dir="testsrc" includes="**/orderAddressTile.jsp"/>
+        <jspcompressor destdir="./tmp" debug="false" failonerror="false" compressjs="true" removecomments="true" removejspcomments="true" skipstrutsformcomments="true">
+            <fileset dir="testsrc" includes="**/*.jsp"/>
         </jspcompressor>
     </target>    
 
