Do not compress javascript inside script tags that have a src attribute.

--- a/build.xml
+++ b/build.xml
@@ -115,8 +115,8 @@
             <pathelement location="${build.dir}/${jar.name}"/>
         </path>    
         <taskdef name="jspcompressor" classname="com.googlecode.jspcompressor.ant.task.CompressJspTask" classpathref="compressor-classpath"/>
-        <jspcompressor destdir="./tmp" debug="false" failonerror="true" compressjs="true" removecomments="true" removejspcomments="true" skipstrutsformcomments="true">
-            <fileset dir="testsrc" includes="**/*.jsp"/>
+        <jspcompressor destdir="./tmp" debug="true" failonerror="true" compressjs="true" removecomments="true" removejspcomments="true" skipstrutsformcomments="true">
+            <fileset dir="lib" includes="**/*.html"/>
         </jspcompressor>
     </target>    
 
